Code architecture changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,54 +1,2 @@
-<h1>{{title}}</h1>
-<hr/>
-
-<h4>Step 1: Authorize payment data from Google.</h4>
-<br>
-<google-pay-button
-environment = "TEST"
-buttonType="buy"
-buttonColor="black"
-[paymentRequest] = "paymentRequest"
-(loadpaymentdata) = "onLoadPaymentData($event)"
-(error) = "onError($event)"
-[paymentAuthorizedCallback] = "onPaymentDataAuthorized"
->
-</google-pay-button>
-<br>
-<br>
-<div *ngIf = "(tokenizationDataString | json) != '{}'" style = "word-wrap: break-word;">
-  <h4>You can use this object to create CKO Token using Postman/Curl request directly.</h4>
-  "type" : "googlepay" , "token_data" : {{tokenizationDataString}}
-</div>
-<br>
-
-<div *ngIf = "!isDisabledStep2">
-  <h4>Step 2: Request token from Checkout.com now.</h4>
-<br>
-  <button class="btn btn-primary" [disabled] = "(paymentID | json) != '{}' || (ckoToken | json) != '{}' " (click)="getCKOToken($event)">Get CKO Token</button>
-</div>
-<br>
-<br>
-<div  *ngIf = "(ckoToken | json) != '{}'">
-  <h4>You can use this token to request payment from CKO gateway using Postman/Curl request directly.</h4>
-  {{ckoToken}}
-  <br>
-  <br>
-  <h4>Step 3: Request payment from Checkout.com.</h4>
-  <br>
-  <button class="btn btn-primary" [disabled] = "(paymentID | json) != '{}'" (click)="requestPayment($event)">CKO Payment Request</button>
-</div>
-<br>
-<br>
-<div  *ngIf = "(paymentID | json) != '{}'">
-  <h4>Payment request successful.</h4>
-  <br>
-</div>
-<span *ngIf = "(paymentID | json) != '{}'" style="width:100px;">{{paymentID}}</span>
-  <span  *ngIf = "(paymentID | json) != '{}'" style="padding-left: 30px;">
-    <button class="btn btn-primary" [disabled] = "(paymentID | json) == '{}'" (click)="makeAnotherPayment($event)">Make Another Payment</button>
-  </span>
-
-
-
-
-
+<app-home></app-home>
+<router-outlet></router-outlet>
